--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -357,11 +357,11 @@
         "3+2"
       ],
       "metadata": {
-        "id": "UuYhW02ErqYb",
-        "outputId": "79121c3d-458b-4033-9d33-b1a146db059c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UuYhW02ErqYb",
+        "outputId": "79121c3d-458b-4033-9d33-b1a146db059c"
       },
       "execution_count": 1,
       "outputs": [
@@ -383,11 +383,11 @@
         "197/50"
       ],
       "metadata": {
-        "id": "RMHK7B-ssLWc",
-        "outputId": "72d41297-1e6c-4e0a-8cd7-76ea084e0072",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RMHK7B-ssLWc",
+        "outputId": "72d41297-1e6c-4e0a-8cd7-76ea084e0072"
       },
       "execution_count": 2,
       "outputs": [
@@ -409,11 +409,11 @@
         "int(197/50)"
       ],
       "metadata": {
-        "id": "TCaHxHfMsn_n",
-        "outputId": "044b73d0-00bb-47a9-a74d-e693d5ce8591",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TCaHxHfMsn_n",
+        "outputId": "044b73d0-00bb-47a9-a74d-e693d5ce8591"
       },
       "execution_count": 3,
       "outputs": [
@@ -448,11 +448,11 @@
         "print(f\"Total amount: RM{total_amount}\")"
       ],
       "metadata": {
-        "id": "I73NffnOuCw1",
-        "outputId": "7384377e-9af9-401a-9554-b91b10c99a78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I73NffnOuCw1",
+        "outputId": "7384377e-9af9-401a-9554-b91b10c99a78"
       },
       "execution_count": 5,
       "outputs": [
@@ -471,11 +471,11 @@
         "int(197/50)"
       ],
       "metadata": {
-        "id": "n13a6GCNuIYk",
-        "outputId": "8a1440dd-b82f-4a4f-dd26-f9463e07dc7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n13a6GCNuIYk",
+        "outputId": "8a1440dd-b82f-4a4f-dd26-f9463e07dc7a"
       },
       "execution_count": 6,
       "outputs": [
@@ -497,11 +497,11 @@
         "197%50"
       ],
       "metadata": {
-        "id": "xI6haCppur9v",
-        "outputId": "f8731b5c-ca8f-4c1f-9524-360f26b3310f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xI6haCppur9v",
+        "outputId": "f8731b5c-ca8f-4c1f-9524-360f26b3310f"
       },
       "execution_count": 8,
       "outputs": [
@@ -523,11 +523,11 @@
         "int(47/10)"
       ],
       "metadata": {
-        "id": "CTZ7MMzLuyRr",
-        "outputId": "660df15f-3bf2-48e3-8868-35f3dac1d3f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CTZ7MMzLuyRr",
+        "outputId": "660df15f-3bf2-48e3-8868-35f3dac1d3f6"
       },
       "execution_count": 10,
       "outputs": [
@@ -549,11 +549,11 @@
         "47%10"
       ],
       "metadata": {
-        "id": "C1RNWSjlu5QE",
-        "outputId": "5e25a684-c407-4f91-8f93-34b9ae0fbfc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C1RNWSjlu5QE",
+        "outputId": "5e25a684-c407-4f91-8f93-34b9ae0fbfc0"
       },
       "execution_count": 11,
       "outputs": [
@@ -575,11 +575,11 @@
         "int(7/1)"
       ],
       "metadata": {
-        "id": "Tu63gxWku7nv",
-        "outputId": "368a2585-2f5f-4b91-8a1e-e304f43935b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tu63gxWku7nv",
+        "outputId": "368a2585-2f5f-4b91-8a1e-e304f43935b8"
       },
       "execution_count": 12,
       "outputs": [
@@ -601,7 +601,9 @@
         "money = 197\n",
         "print(\"The money inserted is RM\", money)\n",
         "fiftys = int(money/50)\n",
-        "money = money%50\n",
+        "if fiftys > 1:\n",
+        "  fiftys = 1\n",
+        "money -= (50*fiftys)\n",
         "tens = int(money/10)\n",
         "money = money%10\n",
         "ones = int(money/1)\n",
@@ -613,21 +615,21 @@
         "print(\"The remainder is RM\", money)\n"
       ],
       "metadata": {
-        "id": "3-KD8dCYvArU",
-        "outputId": "e53ea0bf-ec41-4a34-d500-e7aedd91ed15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3-KD8dCYvArU",
+        "outputId": "ada98ed9-43ed-4984-94c0-ee4cc185e09a"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The money inserted is RM 197\n",
-            "RM50 bank notes are 3\n",
-            "RM10 bank notes are 4\n",
+            "RM50 bank notes are 1\n",
+            "RM10 bank notes are 14\n",
             "RM1 bank notes are 7\n",
             "The remainder is RM 0\n"
           ]
@@ -636,9 +638,93 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def select_second_element(x):\n",
+        "    if len(x) > 1 :\n",
+        "        return x[1]\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "X = [1, \"Guess\", 4.20, 5]\n",
+        "print (select_second_element(X))\n"
+      ],
+      "metadata": {
+        "id": "efmlW7rB3bls",
+        "outputId": "fbe566c8-4d2b-4e6f-db9a-c4fc311cd24d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guess\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "teams = [\n",
+        "    [\"Guardiola\", \"Ederson\", \"De Bruyne\", \"Ake\"],\n",
+        "    [\"Arteta\", \"Ramsdale\", \"Odegaard\", \"Saliba\"],\n",
+        "    [\"Ten Hagg\", \"Martinez\", \"Onana\", \"Shaw\"]\n",
+        "]\n",
+        "\n",
+        "\n",
+        "def third_best_team_captain():\n",
+        "    worst_team = teams[-1]\n",
+        "    captain = worst_team[1]\n",
+        "    print(f\"The captain of the worst team is: {captain}\")\n",
+        "\n",
+        "\n",
+        "def best_team_manager():\n",
+        "    best_team = teams[0]\n",
+        "    manager = best_team[0]\n",
+        "    print(f\"The manager of the best team is: {manager}\")\n",
+        "\n",
+        "\n",
+        "import random\n",
+        "def second_best_team_random_player():\n",
+        "    second_best_team = teams[1]\n",
+        "    random_player = random.choice(second_best_team)\n",
+        "    print(f\"A random player from the second-best team is: {random_player}\")\n",
+        "\n",
+        "\n",
+        "third_best_team_captain()\n",
+        "best_team_manager()\n",
+        "second_best_team_random_player()"
+      ],
+      "metadata": {
+        "id": "YKKupZqw4IN8",
+        "outputId": "dc6982c1-cbbe-4580-d1d9-95b2efb41c77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The captain of the worst team is: Martinez\n",
+            "The manager of the best team is: Guardiola\n",
+            "A random player from the second-best team is: Ramsdale\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zKR3Qz4TwUPm"
+        "id": "C4DNRoVX6Vn4"
       },
       "execution_count": null,
       "outputs": []
@@ -647,7 +733,6 @@
   "metadata": {
     "colab": {
       "name": "Welcome To Colaboratory",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
